2011-07-22  Sergey Glazunov  <serg.glazunov@gmail.com>

        Perform the JavaScript navigation check on a complete URL
        https://bugs.webkit.org/show_bug.cgi?id=65038

        Reviewed by Adam Barth.

        * http/tests/security/xss-DENIED-document-baseURI-javascript-expected.txt: Added.
        * http/tests/security/xss-DENIED-document-baseURI-javascript.html: Added.

2011-07-25  Daniel Bates  <dbates@rim.com>

        REGRESSION (r85964): Improper relayout of some nested positioned elements
        https://bugs.webkit.org/show_bug.cgi?id=64286

        Reviewed by David Hyatt.

        Add test case to ensure we don't regress relayout of nested positioned elements.

        * fast/block/positioning/relayout-nested-positioned-elements-expected-crash.txt: Added.
        * fast/block/positioning/relayout-nested-positioned-elements-crash.html: Added.

2011-07-26  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=60778

        Use after free because of line box culling optimization regression.

        In the case of a child with no line box being removed (typically
        a <br> in quirks mode), if there is no previous sibling with a line
        box, then we have a potential problem with the culling optimization.

        The culled inline may still have other leaf line box children, but
        they may follow the removed <br>. In this case we can't rely on
        them, since we need a line box that comes before the <br>.

        The fix is to simply recur up to the parent if we are a culled inline
        and could not find a previous line box.

        Reviewed by Dan Bernstein.

        Added editing/execCommand/crash-line-break-after-outdent.html

        * editing/execCommand/crash-line-break-after-outdent-expected.txt: Added.
        * editing/execCommand/crash-line-break-after-outdent.html: Added.

2011-07-19  Abhishek Arya  <inferno@chromium.org>

        Tests that we do not crash when removing unrendering nodes