@@ -1,3 +1,12 @@
+2011-05-22  Dominic Cooney  <dominicc@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        When removing a shadow root, also remove it from the render tree.
+        https://bugs.webkit.org/show_bug.cgi?id=61245
+
+        * platform/mac/Skipped: Unskip shadow tests.
+
 2011-07-22  Sergey Glazunov  <serg.glazunov@gmail.com>
 
         Perform the JavaScript navigation check on a complete URL
